@@ -757,6 +757,11 @@ Channel.prototype.userJoin = function(user) {
     if(user.name != "") {
         for(var i = 0; i < this.users.length; i++) {
             if(this.users[i].name.toLowerCase() == user.name.toLowerCase()) {
+                if (this.users[i] == user) {
+                    Logger.errlog.log("Wat: userJoin() called on user "+
+                                      "already in the channel");
+                    break;
+                }
                 this.kick(this.users[i], "Duplicate login");
             }
         }
