@@ -639,6 +639,11 @@ User.prototype.login = function(name, pw, session) {
             if(self.channel != null) {
                 for(var i = 0; i < self.channel.users.length; i++) {
                     if(self.channel.users[i].name.toLowerCase() == name.toLowerCase()) {
+                        if (self.channel.users[i] == self) {
+                            Logger.errlog.log("Wat: user.login() but user"+
+                                              "already logged in on channel");
+                            break;
+                        }
                         self.channel.kick(self.channel.users[i], "Duplicate login");
                     }
                 }
